# colt-lang

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
colti/src/: main.c
colti/src/byte-code/: byte_code.c  byte_code.h  chunk.c  chunk.h  disassemble.c  disassemble.h
colti/src/lang/: scanner.c  scanner.h  token.c  token.h
colti/src/structs/: struct_string.c  struct_string.h
colti/src/util/: common.h  console_colors.h  memory.c  memory.h  parse_args.c  parse_args.h  precomph.h
colti/src/util/cmake/: cmake_colti_config.in
colti/src/values/: colti_floating_value.h  colti_integer_value.h  double_value.h
colti/src/vm/: stack_based_vm.c  stack_based_vm.h
resources/: class.ct  main.ct
resources/cmake/: cmake_colti_config.in
resources/doxygen/: Doxyfile.in
resources/highlight_code/: README.md  arithmetic.ct  highlight.js  style.css
scripts/: README.md  build_colt.py  build_documentation.py  generate_highlighted_code.py  generate_project.py
tests/: chunk_and_vm.c  chunk_disassemble.c  chunk_serialize.c
